Supports for Joint DataSet.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -494,6 +494,14 @@ Choices.sortType.none=none
 Choices.sortType.sortOnGroupkey=Sort on group key
 Choices.sortType.complexSort=Complex sort
 
+#62. jointType
+Choices.jointType.inner=inner join
+Choices.jointType.leftOut=left out join
+Choices.jointType.rightOut=right out join
+
+#63. jointOperator
+Choices.jointOperator.equals=equals
+
 ###########################################################
 # Classes
 
@@ -1630,6 +1638,7 @@ Structure.DateTimeFormatValue=Date Time Format Value
 Structure.UserMethod=User Method
 Structure.DataSourceParamBinding=Data Source parameter binding
 Structure.PropertyBinding=Property Binding
+Structure.JointCondition=Joint Condition
 
 #0.MapRule
 Structure.MapRule.testExpr=TestExpression
@@ -1815,6 +1824,14 @@ Structure.PropertyBinding.name=Name
 Structure.PropertyBinding.id=Element id
 Structure.PropertyBinding.value=Value
 
+#25. JointCondition
+Structure.JointCondition.jointType=Joint type
+Structure.JointCondition.jointOperator=Joint operator
+Structure.JointCondition.leftDataSet=Left data set
+Structure.JointCondition.rightDataSet=Right data set
+Structure.JointCondition.leftExpression=Left expression
+Structure.JointCondition.rightExpression=Right expression
+
 ###########################################################
 # Element names
 
@@ -1866,6 +1883,7 @@ Element.TemplateParameterDefinition=Template Parameter Definition
 Element.TemplateElement=Template Element
 Element.TemplateReportItem=Template Report Item
 Element.TemplateDataSet=Template Data Set
+Element.JointDataSet=Joint Data Set
 
 ###########################################################
 # Element property names
@@ -2514,7 +2532,11 @@ Element.TemplateParameterDefinition.slot.default=Default
 Element.TemplateElement.name=Name
 Element.TemplateElement.refTemplateParameter=Ref Template Parameter
 
-#41 Rectangle  ( prefix  Element.Rectangle )
+#41 JointDataset ( Prefix Element.JointDataset )
+Element.JointDataSet.dataSets=Data sets
+Element.JointDataSet.jointConditions=Joint conditions
+
+#42 Rectangle  ( prefix  Element.Rectangle )
 
 ###########################################################
 # Predefined style
