Enhancements on JointDataSet.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -164,6 +164,8 @@ Choices.mapOperator.isFalse=Is False
 Choices.mapOperator.like=Like
 Choices.mapOperator.match=Match
 Choices.mapOperator.any=Any
+Choices.mapOperator.top-n=Top n
+Choices.mapOperator.bottom-n=Bottom n
   
 #15.imageRefType
 Choices.imageRefType.none=None
@@ -494,13 +496,13 @@ Choices.sortType.none=none
 Choices.sortType.sortOnGroupkey=Sort on group key
 Choices.sortType.complexSort=Complex sort
 
-#62. jointType
-Choices.jointType.inner=inner join
-Choices.jointType.leftOut=left out join
-Choices.jointType.rightOut=right out join
+#62. joinType
+Choices.joinType.inner=inner join
+Choices.joinType.leftOut=left out join
+Choices.joinType.rightOut=right out join
 
-#63. jointOperator
-Choices.jointOperator.equals=equals
+#63. joinOperator
+Choices.joinOperator.equals=equals
 
 ###########################################################
 # Classes
@@ -1638,7 +1640,7 @@ Structure.DateTimeFormatValue=Date Time Format Value
 Structure.UserMethod=User Method
 Structure.DataSourceParamBinding=Data Source parameter binding
 Structure.PropertyBinding=Property Binding
-Structure.JointCondition=Joint Condition
+Structure.JoinCondition=Join Condition
 
 #0.MapRule
 Structure.MapRule.testExpr=TestExpression
@@ -1824,13 +1826,13 @@ Structure.PropertyBinding.name=Name
 Structure.PropertyBinding.id=Element id
 Structure.PropertyBinding.value=Value
 
-#25. JointCondition
-Structure.JointCondition.jointType=Joint type
-Structure.JointCondition.jointOperator=Joint operator
-Structure.JointCondition.leftDataSet=Left data set
-Structure.JointCondition.rightDataSet=Right data set
-Structure.JointCondition.leftExpression=Left expression
-Structure.JointCondition.rightExpression=Right expression
+#25. JoinCondition
+Structure.JoinCondition.joinType=Join type
+Structure.JoinCondition.joinOperator=Join operator
+Structure.JoinCondition.leftDataSet=Left data set
+Structure.JoinCondition.rightDataSet=Right data set
+Structure.JoinCondition.leftExpression=Left expression
+Structure.JoinCondition.rightExpression=Right expression
 
 ###########################################################
 # Element names
@@ -1842,6 +1844,7 @@ Element.ReportElement=Report Element
 Element.DataSource=Data Source
 Element.JdbcDataSource=JDBC Data Source
 Element.DataSet=Data Set
+Element.SimpleDataSet=Simple Data Set
 Element.JdbcSelectDataSet=JDBC Select Data Set
 Element.Parameter=Parameter
 Element.ScalarParameter=ScalarParameter
@@ -1980,37 +1983,37 @@ Element.JdbcDataSource.password=Password
 Element.JdbcDataSource.driver=Driver
 Element.JdbcDataSource.dataSource=Data source
 
-#4. DataSet  ( prefix  Element.DataSet )
-Element.DataSet.dataSource=Data source
-Element.DataSet.beforeOpen=Before open
-Element.DataSet.beforeOpen.toolTip=Called just before BIRT opens the data set
-Element.DataSet.beforeOpen.this=Data set
-Element.DataSet.beforeOpen.reportContext=Report context
-Element.DataSet.beforeClose=Before close
-Element.DataSet.beforeClose.this=Data set
-Element.DataSet.beforeClose.toolTip=Called just before BIRT closes the data set
-Element.DataSet.beforeClose.reportContext=Report context
-Element.DataSet.onFetch=On fetch
-Element.DataSet.onFetch.toolTip=Called just before BIRT fetches data row from the data set
-Element.DataSet.onFetch.reportContext=Report context
-Element.DataSet.onFetch.this=Data set
-Element.DataSet.onFetch.dataSetRow=Data set row
-Element.DataSet.afterOpen=After open
-Element.DataSet.afterOpen.this=Data set
-Element.DataSet.afterOpen.toolTip=Called just after BIRT opens the data set
-Element.DataSet.afterOpen.reportContext=Report context
-Element.DataSet.afterClose=After close
-Element.DataSet.afterClose.toolTip=Called just after BIRT closes the data set
-Element.DataSet.afterClose.reportContext=Report context
-Element.DataSet.parameters=Parameters
-Element.DataSet.paramBindings=Parameter bindings
-Element.DataSet.resultSet=Result set
-Element.DataSet.computedColumns=Computed columns
-Element.DataSet.columnHints=Column hints
-Element.DataSet.filter=Filter
-Element.DataSet.cachedMetaData=Cached metadata
-Element.DataSet.refTemplateParameter=Referred Template Parameter Definition
-Element.DataSet.cachedRowCount=Cached row count
+#4. DataSet  ( prefix  Element.SimpleDataSet )
+Element.SimpleDataSet.dataSource=Data source
+Element.SimpleDataSet.beforeOpen=Before open
+Element.SimpleDataSet.beforeOpen.toolTip=Called just before BIRT opens the data set
+Element.SimpleDataSet.beforeOpen.this=Data set
+Element.SimpleDataSet.beforeOpen.reportContext=Report context
+Element.SimpleDataSet.beforeClose=Before close
+Element.SimpleDataSet.beforeClose.this=Data set
+Element.SimpleDataSet.beforeClose.toolTip=Called just before BIRT closes the data set
+Element.SimpleDataSet.beforeClose.reportContext=Report context
+Element.SimpleDataSet.onFetch=On fetch
+Element.SimpleDataSet.onFetch.toolTip=Called just before BIRT fetches data row from the data set
+Element.SimpleDataSet.onFetch.reportContext=Report context
+Element.SimpleDataSet.onFetch.this=Data set
+Element.SimpleDataSet.onFetch.dataSetRow=Data set row
+Element.SimpleDataSet.afterOpen=After open
+Element.SimpleDataSet.afterOpen.this=Data set
+Element.SimpleDataSet.afterOpen.toolTip=Called just after BIRT opens the data set
+Element.SimpleDataSet.afterOpen.reportContext=Report context
+Element.SimpleDataSet.afterClose=After close
+Element.SimpleDataSet.afterClose.toolTip=Called just after BIRT closes the data set
+Element.SimpleDataSet.afterClose.reportContext=Report context
+Element.SimpleDataSet.parameters=Parameters
+Element.SimpleDataSet.paramBindings=Parameter bindings
+Element.SimpleDataSet.resultSet=Result set
+Element.SimpleDataSet.computedColumns=Computed columns
+Element.SimpleDataSet.columnHints=Column hints
+Element.SimpleDataSet.filter=Filter
+Element.SimpleDataSet.cachedMetaData=Cached metadata
+Element.SimpleDataSet.refTemplateParameter=Referred Template Parameter Definition
+Element.SimpleDataSet.cachedRowCount=Cached row count
   
 #5. JdbcSelectDataSet  ( prefix  Element.JdbcSelectDataSet )
 Element.JdbcSelectDataSet.statement=Statement
@@ -2534,7 +2537,7 @@ Element.TemplateElement.refTemplateParameter=Ref Template Parameter
 
 #41 JointDataset ( Prefix Element.JointDataset )
 Element.JointDataSet.dataSets=Data sets
-Element.JointDataSet.jointConditions=Joint conditions
+Element.JointDataSet.joinConditions=Join conditions
 
 #42 Rectangle  ( prefix  Element.Rectangle )
 
