Bug 126415 Hard to translate the word "None" for German

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -76,11 +76,11 @@ Choices.fontWeight.800=800
 Choices.fontWeight.900=900
 
 #2.textUnderline
-Choices.textUnderline.none=None
+Choices.textUnderline.none=No underline
 Choices.textUnderline.underline=Underline
   
 #3.lineStyle
-Choices.lineStyle.none=None
+Choices.lineStyle.none=No line style
 Choices.lineStyle.solid=Solid
 Choices.lineStyle.dotted=Dotted
 Choices.lineStyle.dashed=Dashed
@@ -132,7 +132,7 @@ Choices.pageOrientation.portrait=Portrait
 Choices.pageOrientation.landscape=Landscape
    
 #12.interval
-Choices.interval.none=None
+Choices.interval.none=No interval
 Choices.interval.prefix=Prefix
 Choices.interval.year=Year
 Choices.interval.quarter=Quarter
@@ -168,7 +168,7 @@ Choices.mapOperator.top-n=Top n
 Choices.mapOperator.bottom-n=Bottom n
   
 #15.imageRefType
-Choices.imageRefType.none=None
+Choices.imageRefType.none=No image
 Choices.imageRefType.url=URL
 Choices.imageRefType.file=FILE
 Choices.imageRefType.expr=Expression
@@ -210,24 +210,24 @@ Choices.lineSpacing.lines=Lines
 Choices.lineSpacing.exact=Exact
   
 #24.lineType
-Choices.lineType.none=None
+Choices.lineType.none=No line type
 Choices.lineType.solid=Solid
 Choices.lineType.dotted=Dotted
 Choices.lineType.dashed=Dashed
 Choices.lineType.double=Double
   
 #25.pageBreakBefore
-Choices.pageBreakBefore.none=None
+Choices.pageBreakBefore.none=No page break before
 Choices.pageBreakBefore.ifFirst=If First
 Choices.pageBreakBefore.always=Always
   
 #26.pageBreakAfter
-Choices.pageBreakAfter.none=None
+Choices.pageBreakAfter.none=No page break after
 Choices.pageBreakAfter.ifLast=If Last
 Choices.pageBreakAfter.always=Always
   
 #27.actionLinkType
-Choices.actionLinkType.none=None
+Choices.actionLinkType.none=No action link type
 Choices.actionLinkType.hyperlink=HyperLink
 Choices.actionLinkType.drill-through=Drill Through
 Choices.actionLinkType.bookmark-link=Bookmark Link
@@ -237,7 +237,7 @@ Choices.actionFormatType.html=html
 Choices.actionFormatType.pdf=pdf
   
 #28.drillThroughLinkType
-Choices.drillThroughType.none=None
+Choices.drillThroughType.none=No drill-through type
 Choices.drillThroughType.bookmark-link=Bookmark Link
 Choices.drillThroughType.search=Search
  
@@ -292,7 +292,7 @@ Choices.backgroundPositionY.bottom=Bottom
 Choices.transform.capitalize=Capitalize
 Choices.transform.uppercase=Upper Case
 Choices.transform.lowercase=Lower Case
-Choices.transform.none=None
+Choices.transform.none=No transformation
 
 #38.normal
 Choices.normal.normal=Normal
@@ -315,7 +315,7 @@ Choices.whiteSpace.nowrap=No Wrapping
 #41.display
 Choices.display.block=Block
 Choices.display.inline=Inline
-Choices.display.none=None
+Choices.display.none=No display
 		
 #42.pageBreak
 Choices.pageBreak.auto=Auto
@@ -334,11 +334,11 @@ Choices.pageBreakInside.inherit=Inherit
 Choices.margine.auto=Auto
 
 #45.textOverline
-Choices.textOverline.none=None
+Choices.textOverline.none=No line over text
 Choices.textOverline.overline=Overline
 
 #46.textLineThrough
-Choices.textLineThrough.none=None
+Choices.textLineThrough.none=No line through text
 Choices.textLineThrough.line-through=Line-through
 
 #48.lineWidth
@@ -406,10 +406,10 @@ Choices.columnDataType.table=Table
 #54. searchType
 Choices.searchType.any=Any
 Choices.searchType.indexed=Indexed
-Choices.searchType.none=None
+Choices.searchType.none=No search type
 
 #55. exportType
-Choices.exportType.none=None
+Choices.exportType.none=No export type
 Choices.exportType.if-realized=If Realized
 Choices.exportType.always=Always
 
@@ -418,7 +418,7 @@ Choices.analysisType.auto=Auto
 Choices.analysisType.dimension=Dimension
 Choices.analysisType.measure=Measure
 Choices.analysisType.detail=Detail
-Choices.analysisType.none=None
+Choices.analysisType.none=No analysis type
 
 #57. scalarParamAlign
 Choices.scalarParamAlign.auto=Auto
@@ -492,7 +492,7 @@ Choices.templateElementType.textData=TextData
 Choices.templateElementType.dataSet=DataSet
 
 #61. sortType
-Choices.sortType.none=none
+Choices.sortType.none=No sort type
 Choices.sortType.sortOnGroupkey=Sort on group key
 Choices.sortType.complexSort=Complex sort
 
