Add new property on Column element.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2307,6 +2307,7 @@ Element.TableGroup.onPrepare.reportContext=Report context
 Element.Column.repeat=Repeat
 Element.Column.width=Width
 Element.Column.alignment=Alignment
+Element.Column.suppressDuplicates=Suppress duplicates
   
 #21.Row  ( prefix  Element.Row )
 Element.Row.visibility=Visibility
