Add list property type and change the related APIs.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -37,6 +37,7 @@ Property.variant=variant
 Property.structList=structList
 Property.extends=extends
 Property.script=Script
+Property.list=list
 
 ###########################################################
 # Choice values
@@ -2919,6 +2920,7 @@ Error.DesignParserException.VIRTUAL_PARENT_NOT_FOUND=BaseID "{0}" can not refere
 Error.DesignParserException.DUPLICATE_ELEMENT_ID=ID of the {0} is duplicate with that of {1}.  
 Error.DesignParserException.INCONSISTENT_TEMPLATE_ELEMENT_TYPE=The template element {0} is inconsistent with the default element of the referred template parameter definition {1}.
 Error.DesignParserException.MISSING_TEMPLATE_PARAMETER_DEFAULT=The element {0} must define a default element explicitly.
+Error.DesignParserException.WRONG_SIMPLE_LIST_TYPE=No such an element property is simple list type.
 
 #DesignFileException
 Error.DesignFileException.SYNTAX_ERROR=Syntax error found, and see error details.
