DE's support for page breaks.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -218,15 +218,17 @@ Choices.lineType.dashed=Dashed
 Choices.lineType.double=Double
   
 #25.pageBreakBefore
-Choices.pageBreakBefore.none=No page break before
-Choices.pageBreakBefore.ifFirst=If First
+Choices.pageBreakBefore.auto=Auto
 Choices.pageBreakBefore.always=Always
-  
+Choices.pageBreakBefore.avoid=Avoid
+Choices.pageBreakBefore.alwaysExcludingFirst=Always Excluding First
+
 #26.pageBreakAfter
-Choices.pageBreakAfter.none=No page break after
-Choices.pageBreakAfter.ifLast=If Last
+Choices.pageBreakAfter.auto=Auto
 Choices.pageBreakAfter.always=Always
-  
+Choices.pageBreakAfter.avoid=Avoid
+Choices.pageBreakAfter.alwaysExcludingLast=Always Excluding Last
+
 #27.actionLinkType
 Choices.actionLinkType.none=No action link type
 Choices.actionLinkType.hyperlink=HyperLink
@@ -317,19 +319,10 @@ Choices.whiteSpace.nowrap=No Wrapping
 Choices.display.block=Block
 Choices.display.inline=Inline
 Choices.display.none=No display
-		
-#42.pageBreak
-Choices.pageBreak.auto=Auto
-Choices.pageBreak.always=Always
-Choices.pageBreak.avoid=Avoid
-Choices.pageBreak.left=Left
-Choices.pageBreak.right=Right
-Choices.pageBreak.inherit=Inherit
 
 #43.pageBreakInside
 Choices.pageBreakInside.avoid=Avoid
 Choices.pageBreakInside.auto=Auto
-Choices.pageBreakInside.inherit=Inherit
 
 #44.margin
 Choices.margine.auto=Auto
@@ -2237,6 +2230,7 @@ Element.ListingGroup.eventHandlerClass=Event handler class
 Element.ListingGroup.pageBreakBefore=Page break before
 Element.ListingGroup.pageBreakAfter=Page break after
 Element.ListingGroup.filter=Filter
+Element.ListingGroup.repeatHeader=Repeat header
 Element.ListingGroup.onStart=On start
 Element.ListingGroup.onStart.toolTip=Called after the data set is open but before the header band is created, but before the first row is retrieved from the data set for this element
 Element.ListingGroup.onRow=On row
@@ -2274,7 +2268,6 @@ Element.ListGroup.onPrepare.reportContext=Report context
 #18.Table  ( prefix  Element.Table )
 Element.Table.caption=Caption
 Element.Table.captionID=Caption key
-Element.Table.repeatHeader=Repeat header
 Element.Table.slot.header=Header
 Element.Table.slot.groups=Groups
 Element.Table.slot.detail=Detail
@@ -2480,7 +2473,7 @@ Element.ScriptDataSet.close.this=Script data set
 #32 Listing ( prefix Element.Lising )
 Element.Listing.sorting=Sorting
 Element.Listing.filter=Filter
-Element.Listing.pageBreakInterval=Page break interval
+Element.Listing.repeatHeader=Repeat header
 Element.Listing.onStart=On start
 Element.Listing.onStart.toolTip=Called after the data set is open but before the header band is created, but before the first row is retrieved from the data set for this element
 Element.Listing.onRow=On row
