Support showDetail property on report group in DE.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2220,6 +2220,7 @@ Element.Text.onRender.reportContext=Report context
 Element.ListingGroup.keyExpr=Key expression
 Element.ListingGroup.sort=Sort
 Element.ListingGroup.toc=TOC
+Element.ListingGroup.hideDetail=Hide detail
 Element.ListingGroup.groupName=Name
 Element.ListingGroup.Interval=Interval
 Element.ListingGroup.intervalBase=Interval base
