Add  a series of new total aggregations.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -71,6 +71,8 @@ data.engine.InvalidTopBottomArgument=The argument of Top/Bottom filters must be 
 data.engine.InvalidTopBottomNArgument=The argument of TopN/BottomN filters must be either zero or a positive integer.
 data.engine.InvalidTopBottomPercentArgument=The argument of TopPercent/BottomPercent filters must be both positive and less than/equal to 100;
 data.engine.InvalidTopBottomN=The total number of rows being proceed must not exceed
+data.engine.InvalidPercentileArgument=The Total.Percentile function only accepts numbers between 0 and 1(inclusive) as its second argument.
+data.engine.InvalidQuartileArgument=The Total.Quartile function only accepts integers between 0 and 4(inclusive) as its second argument.
 data.engine.BadAggrFuncParam=Illegal parameter for aggregate function: {0}
 data.engine.ResetRateGuess=User should reset a new rate guess.
 data.engine.UnsupportedCondOp=Conditional operator is not supported: {0}
