Added the manifest file.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1991,7 +1991,7 @@ Element.SimpleDataSet.onFetch=On fetch
 Element.SimpleDataSet.onFetch.toolTip=Called just before BIRT fetches data row from the data set
 Element.SimpleDataSet.onFetch.reportContext=Report context
 Element.SimpleDataSet.onFetch.this=Data set
-Element.SimpleDataSet.onFetch.dataSetRow=Data set row
+Element.SimpleDataSet.onFetch.row=Data set row
 Element.SimpleDataSet.afterOpen=After open
 Element.SimpleDataSet.afterOpen.this=Data set
 Element.SimpleDataSet.afterOpen.toolTip=Called just after BIRT opens the data set
