Change type property 'format' of 'ScalarParameter' from string to structure.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1635,6 +1635,7 @@ Structure.UserMethod=User Method
 Structure.DataSourceParamBinding=Data Source parameter binding
 Structure.PropertyBinding=Property Binding
 Structure.JoinCondition=Join Condition
+Structure.ParameterFormatValue=Parameter Format Value
 
 #0.MapRule
 Structure.MapRule.testExpr=TestExpression
@@ -1827,6 +1828,10 @@ Structure.JoinCondition.leftDataSet=Left data set
 Structure.JoinCondition.rightDataSet=Right data set
 Structure.JoinCondition.leftExpression=Left expression
 Structure.JoinCondition.rightExpression=Right expression
+
+#26. ParameterFormatValue
+Structure.ParameterFormatValue.category=Category
+Structure.ParameterFormatValue.pattern=Pattern
 
 ###########################################################
 # Element names
