add an property on 'action' to store the target file type.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -498,6 +498,10 @@ Choices.joinType.rightOut=right out join
 #63. joinOperator
 Choices.joinOperator.equals=equals
 
+#64. actionTargetFileType
+Choices.actionTargetFileType.report-design=Report Design
+Choices.actionTargetFileType.report-document=Report Document
+
 ###########################################################
 # Classes
 
@@ -1792,6 +1796,7 @@ Structure.Action.reportName=Report Name
 Structure.Action.paramBindings=Parameter Bindings
 Structure.Action.search=Search Keys
 Structure.Action.formatType=Format Type
+Structure.Action.targetFileType=Target File Type
 
 #18. CachedMetaData
 Structure.CachedMetaData.parameters=Parameters
