add a new property 'targetBookmarkType' to 'action'.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -502,6 +502,10 @@ Choices.joinOperator.equals=equals
 Choices.actionTargetFileType.report-design=Report Design
 Choices.actionTargetFileType.report-document=Report Document
 
+#65. actionBookmarkType
+Choices.actionBookmarkType.bookmark=Bookmark
+Choices.actionBookmarkType.toc=Table of Content
+
 ###########################################################
 # Classes
 
@@ -1797,6 +1801,7 @@ Structure.Action.paramBindings=Parameter Bindings
 Structure.Action.search=Search Keys
 Structure.Action.formatType=Format Type
 Structure.Action.targetFileType=Target File Type
+Structure.Action.targetBookmarkType=Target Bookmark Type
 
 #18. CachedMetaData
 Structure.CachedMetaData.parameters=Parameters
