Starts to support foward moving row position

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -111,7 +111,10 @@ data.engine.GetSaveStreamError=A report document error occurred when getting the
 data.engine.GetLoadStreamError=A report document error occurred when getting the load stream.
 data.engine.NullExpr=Expression cannot be null to retrieve value in presentation.
 data.engine.InValidExpr=Invalid expression to retrieve value in presentation.
- 
+
+data.engine.invalidRowIndex=Invalid row index value: {0}
+data.engine.backwardSeekError=Backward seek is not supported in this version.
+
 # other error
 data.engine.ScriptEvalError=Error evaluating script (source:{0}, line:{1}:  {2}.
 data.engine.PreparedQueryClosed=PreparedQuery instance is closed.
