--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -114,6 +114,7 @@ data.engine.InValidExpr=Invalid expression to retrieve value in presentation.
 
 data.engine.invalidRowIndex=Invalid row index value: {0}
 data.engine.backwardSeekError=Backward seek is not supported in this version.
+data.engine.startError=Next method should be called first.
 
 # other error
 data.engine.ScriptEvalError=Error evaluating script (source:{0}, line:{1}:  {2}.
