[132104]Problem on list/table group

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -111,6 +111,7 @@ data.engine.GetSaveStreamError=A report document error occurred when getting the
 data.engine.GetLoadStreamError=A report document error occurred when getting the load stream.
 data.engine.NullExpr=Expression cannot be null to retrieve value in presentation.
 data.engine.InValidExpr=Invalid expression to retrieve value in presentation.
+data.engine.BadGroupExpr=The group expression must not be empty. 
 
 data.engine.invalidRowIndex=Invalid row index value: {0}
 data.engine.backwardSeekError=Backward seek is not supported in this version.
