Add 'supressDuplicates' to TableRow.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2337,6 +2337,7 @@ Element.Row.onRender=On render
 Element.Row.onRender.toolTip=TBD
 Element.Row.onRender.this=Row instance
 Element.Row.onRender.reportContext=Report context
+Element.Row.suppressDuplicates=Suppress Duplicates
   
 #22.Cell  ( prefix  Element.Cell )
 Element.Cell.column=Column
