- Add parameter, result set, computedColumn into jointDataSet

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1992,7 +1992,12 @@ Element.JdbcDataSource.password=Password
 Element.JdbcDataSource.driver=Driver
 Element.JdbcDataSource.dataSource=Data source
 
-#4. DataSet  ( prefix  Element.SimpleDataSet )
+#4. DataSet  ( prefix  Element.DataSet )
+Element.DataSet.parameters=Parameters
+Element.DataSet.resultSet=Result set
+Element.DataSet.computedColumns=Computed columns
+
+#4. SimpleDataSet  ( prefix  Element.SimpleDataSet )
 Element.SimpleDataSet.dataSource=Data source
 Element.SimpleDataSet.beforeOpen=Before open
 Element.SimpleDataSet.beforeOpen.toolTip=Called just before BIRT opens the data set
@@ -2014,10 +2019,7 @@ Element.SimpleDataSet.afterOpen.reportContext=Report context
 Element.SimpleDataSet.afterClose=After close
 Element.SimpleDataSet.afterClose.toolTip=Called just after BIRT closes the data set
 Element.SimpleDataSet.afterClose.reportContext=Report context
-Element.SimpleDataSet.parameters=Parameters
 Element.SimpleDataSet.paramBindings=Parameter bindings
-Element.SimpleDataSet.resultSet=Result set
-Element.SimpleDataSet.computedColumns=Computed columns
 Element.SimpleDataSet.columnHints=Column hints
 Element.SimpleDataSet.filter=Filter
 Element.SimpleDataSet.cachedMetaData=Cached metadata
@@ -2893,6 +2895,7 @@ Error.SemanticError.INVALID_LIBRARY_REFERENCE=The library reference "{2}" of {0}
 Error.SemanticError.INVALID_PROPERTY_BINDING_ID=The property binding "{1}" in {0} refers a non-existing element.
 Error.SemanticError.PROPERTY_BINDING_FORBIDDEN=The element "{0}" is not in the design tree, so it can not set any property binding.
 Error.SemanticError.INVALID_MASTER_PAGE_CONTEXT_CONTAINMENT=Table or list is not allowed directly or indirectly inside the master page "{0}". 
+Error.SemanticError.DATA_SET_MISSED_IN_JOINT_DATA_SET = The data set "{1}" is missed in joint data set "{0}".
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
