- Add "filter" into joint data set.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1993,11 +1993,12 @@ Element.JdbcDataSource.driver=Driver
 Element.JdbcDataSource.dataSource=Data source
 
 #4. DataSet  ( prefix  Element.DataSet )
-Element.DataSet.parameters=Parameters
 Element.DataSet.resultSet=Result set
 Element.DataSet.computedColumns=Computed columns
+Element.DataSet.filter=Filter
 
 #4. SimpleDataSet  ( prefix  Element.SimpleDataSet )
+Element.SimpleDataSet.parameters=Parameters
 Element.SimpleDataSet.dataSource=Data source
 Element.SimpleDataSet.beforeOpen=Before open
 Element.SimpleDataSet.beforeOpen.toolTip=Called just before BIRT opens the data set
@@ -2021,7 +2022,6 @@ Element.SimpleDataSet.afterClose.toolTip=Called just after BIRT closes the data 
 Element.SimpleDataSet.afterClose.reportContext=Report context
 Element.SimpleDataSet.paramBindings=Parameter bindings
 Element.SimpleDataSet.columnHints=Column hints
-Element.SimpleDataSet.filter=Filter
 Element.SimpleDataSet.cachedMetaData=Cached metadata
 Element.SimpleDataSet.refTemplateParameter=Referred Template Parameter Definition
 Element.SimpleDataSet.cachedRowCount=Cached row count
