- Add column hint property into jointDataSet

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1996,6 +1996,7 @@ Element.JdbcDataSource.dataSource=Data source
 Element.DataSet.resultSet=Result set
 Element.DataSet.computedColumns=Computed columns
 Element.DataSet.filter=Filter
+Element.DataSet.columnHints=Column hints
 
 #4. SimpleDataSet  ( prefix  Element.SimpleDataSet )
 Element.SimpleDataSet.parameters=Parameters
@@ -2021,7 +2022,6 @@ Element.SimpleDataSet.afterClose=After close
 Element.SimpleDataSet.afterClose.toolTip=Called just after BIRT closes the data set
 Element.SimpleDataSet.afterClose.reportContext=Report context
 Element.SimpleDataSet.paramBindings=Parameter bindings
-Element.SimpleDataSet.columnHints=Column hints
 Element.SimpleDataSet.cachedMetaData=Cached metadata
 Element.SimpleDataSet.refTemplateParameter=Referred Template Parameter Definition
 Element.SimpleDataSet.cachedRowCount=Cached row count
