Modified operators and bugs in Choice & ChoiceSets.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -150,12 +150,12 @@ Choices.sortDirection.asc=Ascending
 Choices.sortDirection.desc=Descending
   
 #14.mapOperator
-Choices.mapOperator.eq=Equal
-Choices.mapOperator.ne=Not Equal
+Choices.mapOperator.eq=Equal to
+Choices.mapOperator.ne=Not Equal to
 Choices.mapOperator.lt=Less than
 Choices.mapOperator.le=Less than or Equal
-Choices.mapOperator.ge=Larger than or Equal 
-Choices.mapOperator.gt=Larger than
+Choices.mapOperator.ge=Greater than or Equal 
+Choices.mapOperator.gt=Greater than
 Choices.mapOperator.between=Between
 Choices.mapOperator.notBetween=Not Between
 Choices.mapOperator.isNull=Is Null
@@ -167,6 +167,8 @@ Choices.mapOperator.match=Match
 Choices.mapOperator.any=Any
 Choices.mapOperator.top-n=Top n
 Choices.mapOperator.bottom-n=Bottom n
+Choices.mapOperator.not-like=Not Like
+Choices.mapOperator.not-match=Not Match
   
 #15.imageRefType
 Choices.imageRefType.none=No image
@@ -362,12 +364,12 @@ Choices.formatType.word=Word
 Choices.formatType.powerpoint=Powerpoint
 
 #52. filterOperator
-Choices.filterOperator.eq=Equal
-Choices.filterOperator.ne=Not Equal
+Choices.filterOperator.eq=Equal to
+Choices.filterOperator.ne=Not Equal to
 Choices.filterOperator.lt=Less than
 Choices.filterOperator.le=Less than or Equal
-Choices.filterOperator.ge=Larger than or Equal
-Choices.filterOperator.gt=Larger than
+Choices.filterOperator.ge=Greater than or Equal
+Choices.filterOperator.gt=Greater than
 Choices.filterOperator.between=Between
 Choices.filterOperator.notBetween=Not Between
 Choices.filterOperator.isNull=Is Null
@@ -375,12 +377,14 @@ Choices.filterOperator.isNotNull=Is Not Null
 Choices.filterOperator.isTrue=Is True
 Choices.filterOperator.isFalse=Is False
 Choices.filterOperator.like=Like
+Choices.filterOperator.not-like=Not Like
 Choices.filterOperator.top-n=Top n
 Choices.filterOperator.bottom-n=Bottom n
 Choices.filterOperator.top-percent=Top Percent
 Choices.filterOperator.bottom-percent=Bottom Percent
 Choices.filterOperator.any=Any
 Choices.filterOperator.match=Match
+Choices.filterOperator.not-match=Not Match
 
 #53. propertyMaskType
 Choices.propertyMaskType.change=Change
