add visibility property on TemplateReportItem.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2559,6 +2559,9 @@ Element.JointDataSet.joinConditions=Join conditions
 
 #42 Rectangle  ( prefix  Element.Rectangle )
 
+#43. TemplateReportItem
+Element.TemplateReportItem.visibility=Visibility
+
 ###########################################################
 # Predefined style
 Style.Report=Report
