Added designerState property on OdaDataSet.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1648,6 +1648,7 @@ Structure.DataSourceParamBinding=Data Source parameter binding
 Structure.PropertyBinding=Property Binding
 Structure.JoinCondition=Join Condition
 Structure.ParameterFormatValue=Parameter Format Value
+Structure.OdaDesignerState=Oda Designer State
 
 #0.MapRule
 Structure.MapRule.testExpr=TestExpression
@@ -1846,6 +1847,11 @@ Structure.JoinCondition.rightExpression=Right expression
 #26. ParameterFormatValue
 Structure.ParameterFormatValue.category=Category
 Structure.ParameterFormatValue.pattern=Pattern
+
+#26. OdaDesignerState
+Structure.OdaDesignerState.version=Version
+Structure.OdaDesignerState.stateContentAsString=State content as string
+Structure.OdaDesignerState.stateContentAsBlob=State content as Blob
 
 ###########################################################
 # Element names
@@ -2531,8 +2537,7 @@ Element.OdaDataSet.type=Type
 Element.OdaDataSet.resultSetName=Result set name
 Element.OdaDataSet.publicDriverProperties=Public driver properties
 Element.OdaDataSet.privateDriverProperties=Private driver properties
-Element.OdaDataSet.privateDriverDesignState=Private driver design state
-
+Element.OdaDataSet.designerState=Designer state
 
 #37 DesignElement ( Prefix Element.DesignElement )
 Element.DesignElement.customXml=Custom XML
