--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -79,6 +79,9 @@ data.engine.UnsupportedCondOp=Conditional operator is not supported: {0}
 data.engine.EmptyExpression=The expression cannot be null or empty.
 data.engine.GroupFilteringIsNotAllowedInGiverQuery=Group filtering cannot coexist with computed columns/filters/sorts/groups that are using aggregations.
 
+data.engine.InvalidJoinType=Invalid join type.
+data.engine.InvalidJoinOperator=Invalid join operator.
+
 #computed column value
 data.engine.BadCompColExpr=The expression for computed column "{0}" is not valid.
 data.engine.CompCol.WrongDataType=The data type of computed column "{0}" is {1}, but one of its value is "{2}", which cannot be converted to {1}.
