Added native data type code in result column and dataset params.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1752,6 +1752,7 @@ Structure.ParamBinding.expression=Expression
 Structure.ResultSetColumn.position=Position
 Structure.ResultSetColumn.name=Name
 Structure.ResultSetColumn.dataType=Data Type
+Structure.ResultSetColumn.nativeDataType=Native data type code
 
 #15. ComputedColumn
 Structure.ComputedColumn.name=Column Name
@@ -1790,6 +1791,7 @@ Structure.DataSetParam.isOptional=Is Optional
 Structure.DataSetParam.allowNull=Allow Null
 Structure.DataSetParam.isInput=Is Input Parameter
 Structure.DataSetParam.isOutput=Is Output Parameter
+Structure.DataSetParam.nativeDataType=Native data type code
 
 #16. ExtendedProperty
 Structure.ExtendedProperty.name=Name
