--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2203,6 +2203,10 @@ Element.Label.onRender=On render
 Element.Label.onRender.toolTip=TBD
 Element.Label.onRender.this=Label instance
 Element.Label.onRender.reportContext=Report context
+Element.Label.onPageBreak=On page break
+Element.Label.onPageBreak.toolTip=TBD
+Element.Label.onPageBreak.this=Label instance
+Element.Label.onPageBreak.reportContext=Report context
   
 #12.Element.FreeForm  ( Prefix Element.FreeForm )
 Element.FreeForm.slot.reportItems=Report Items
@@ -2227,6 +2231,10 @@ Element.Data.onRender=On render
 Element.Data.onRender.toolTip=TBD
 Element.Data.onRender.this=Data instance
 Element.Data.onRender.reportContext=Report context
+Element.Data.onPageBreak=On page break
+Element.Data.onPageBreak.toolTip=TBD
+Element.Data.onPageBreak.this=Data instance
+Element.Data.onPageBreak.reportContext=Report context
   
 #14.Text  ( prefix  Element.Text )
 Element.Text.content=Content
@@ -2244,6 +2252,10 @@ Element.Text.onRender=On render
 Element.Text.onRender.toolTip=TBD
 Element.Text.onRender.this=Text instance
 Element.Text.onRender.reportContext=Report context
+Element.Text.onPageBreak=On page break
+Element.Text.onPageBreak.toolTip=TBD
+Element.Text.onPageBreak.this=Text instance
+Element.Text.onPageBreak.reportContext=Report context
   
 #15.ListingGroup  ( prefix  Element.ListingGroup )
 Element.ListingGroup.keyExpr=Key expression
@@ -2286,6 +2298,10 @@ Element.List.onRender=On render
 Element.List.onRender.toolTip=TBD
 Element.List.onRender.this=List instance
 Element.List.onRender.reportContext=Report context
+Element.List.onPageBreak=On page break
+Element.List.onPageBreak.toolTip=TBD
+Element.List.onPageBreak.this=List instance
+Element.List.onPageBreak.reportContext=Report context
   
 #17.ListGroup  ( prefix  Element.ListGroup )
 Element.ListGroup.slot.header=Header
@@ -2294,6 +2310,10 @@ Element.ListGroup.onPrepare=On prepare
 Element.ListGroup.onPrepare.toolTip=TBD
 Element.ListGroup.onPrepare.this=List group
 Element.ListGroup.onPrepare.reportContext=Report context
+Element.ListGroup.onPageBreak=On page break
+Element.ListGroup.onPageBreak.toolTip=TBD
+Element.ListGroup.onPageBreak.this=List group
+Element.ListGroup.onPageBreak.reportContext=Report context
   
 #18.Table  ( prefix  Element.Table )
 Element.Table.caption=Caption
@@ -2318,6 +2338,10 @@ Element.Table.onRender.toolTip=TBD
 Element.Table.onRender.this=Table instance
 Element.Table.onRender.reportContext=Report context
 Element.Table.onRender.object=Object
+Element.Table.onPageBreak=On page break
+Element.Table.onPageBreak.toolTip=TBD
+Element.Table.onPageBreak.this=Table instance
+Element.Table.onPageBreak.reportContext=Report context
   
 #19.TableGroup  ( prefix  Element.TableGroup )
 Element.TableGroup.slot.header=Header
@@ -2326,6 +2350,10 @@ Element.TableGroup.onPrepare=On prepare
 Element.TableGroup.onPrepare.toolTip=TBD
 Element.TableGroup.onPrepare.this=Table group
 Element.TableGroup.onPrepare.reportContext=Report context
+Element.TableGroup.onPageBreak=On page break
+Element.TableGroup.onPageBreak.toolTip=TBD
+Element.TableGroup.onPageBreak.this=Table group
+Element.TableGroup.onPageBreak.reportContext=Report context
   
 #20.Column  ( prefix  Element.Column )
 Element.Column.repeat=Repeat
@@ -2402,6 +2430,10 @@ Element.Image.onRender=On render
 Element.Image.onRender.toolTip=TBD
 Element.Image.onRender.this=Image instance
 Element.Image.onRender.reportContext=Report context
+Element.Image.onPageBreak=On page break
+Element.Image.onPageBreak.toolTip=TBD
+Element.Image.onPageBreak.this=Image instance
+Element.Image.onPageBreak.reportContext=Report context
   
 #24.Grid  ( prefix  Element.Grid )
 Element.Grid.slot.columns=Columns
@@ -2419,6 +2451,10 @@ Element.Grid.onRender=On render
 Element.Grid.onRender.toolTip=TBD
 Element.Grid.onRender.this=Grid instance
 Element.Grid.onRender.reportContext=Report context
+Element.Grid.onPageBreak=On page break
+Element.Grid.onPageBreak.toolTip=TBD
+Element.Grid.onPageBreak.this=Grid instance
+Element.Grid.onPageBreak.reportContext=Report context
   
 #25.Line  ( prefix  Element.Line )
 Element.Line.orientation=Orientation
@@ -2429,7 +2465,7 @@ Element.TextData.contentType=Content type
 Element.TextData.onPrepare=On prepare
 Element.TextData.onPrepare.toolTip=TBD
 Element.TextData.onPrepare.this=Dynamic text
-Element.TextData.onPrepare.reportContext=Report Context
+Element.TextData.onPrepare.reportContext=Report context
 Element.TextData.onPrepare.object=Oject
 Element.TextData.onCreate=On create
 Element.TextData.onCreate.toolTip=TBD
@@ -2440,6 +2476,10 @@ Element.TextData.onRender=On render
 Element.TextData.onRender.toolTip=TBD
 Element.TextData.onRender.this=Dynamic text instance
 Element.TextData.onRender.reportContext=Report context
+Element.TextData.onPageBreak=On page break
+Element.TextData.onPageBreak.toolTip=TBD
+Element.TextData.onPageBreak.this=Dynamic text instance
+Element.TextData.onPageBreak.reportContext=Report context
 
 #27.ExtendedItem   ( prefix  Element.ExtendedItem )
 Element.ExtendedItem.extensionName=Extension name
@@ -2457,6 +2497,10 @@ Element.ExtendedItem.onRender=On render
 Element.ExtendedItem.onRender.toolTip=Executed when the element is prepared for rendering in the Presentation Engine
 Element.ExtendedItem.onRender.this=Extended item instance
 Element.ExtendedItem.onRender.reportContext=Report context
+Element.ExtendedItem.onPageBreak=On page break
+Element.ExtendedItem.onPageBreak.toolTip=TBD
+Element.ExtendedItem.onPageBreak.this=Extended item instance
+Element.ExtendedItem.onPageBreak.reportContext=Report context
 
 #28.DataSource ( prefix Element.DataSource )
 Element.DataSource.beforeOpen=Before open
@@ -2486,20 +2530,20 @@ Element.ScriptDataSource.close.this=Script data source
 #31 ScriptDataSet ( prefix Element.ScriptDataSet )
 Element.ScriptDataSet.open=Open
 Element.ScriptDataSet.open.toolTip=Opens the data set
-Element.ScriptDataSet.open.this=Script data set
+Element.ScriptDataSet.open.this=Script data set 
 Element.ScriptDataSet.describe=Describe
 Element.ScriptDataSet.describe.toolTip=Describes the result set.
 Element.ScriptDataSet.describe.reportContext=Report context 
-Element.ScriptDataSet.describe.this=Script data set 
+Element.ScriptDataSet.describe.this=Script data set  
 Element.ScriptDataSet.describe.dataSetMetaData=Data set meta data
 Element.ScriptDataSet.fetch=Fetch
 Element.ScriptDataSet.fetch.currentRow=Current row
 Element.ScriptDataSet.fetch.toolTip=Creates, populates and returns an object of type DataRow
 Element.ScriptDataSet.fetch.reportContext=Report context 
-Element.ScriptDataSet.fetch.this=Script data set 
+Element.ScriptDataSet.fetch.this=Script data set  
 Element.ScriptDataSet.close=Close
 Element.ScriptDataSet.close.toolTip=Closes the data set
-Element.ScriptDataSet.close.this=Script data set
+Element.ScriptDataSet.close.this=Script data set 
 
 #32 Listing ( prefix Element.Lising )
 Element.Listing.sorting=Sorting
