- Add parameter property into joint data set

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2009,9 +2009,9 @@ Element.DataSet.resultSet=Result set
 Element.DataSet.computedColumns=Computed columns
 Element.DataSet.filter=Filter
 Element.DataSet.columnHints=Column hints
+Element.DataSet.parameters=Parameters
 
 #4. SimpleDataSet  ( prefix  Element.SimpleDataSet )
-Element.SimpleDataSet.parameters=Parameters
 Element.SimpleDataSet.dataSource=Data source
 Element.SimpleDataSet.beforeOpen=Before open
 Element.SimpleDataSet.beforeOpen.toolTip=Called just before BIRT opens the data set
