Fix bug 133776, Oda DesignerState support on OdaDataSource.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2575,6 +2575,7 @@ Element.OdaDataSource.driverName=Driver name
 Element.OdaDataSource.extensionID=Extension ID
 Element.OdaDataSource.publicDriverProperties=Public driver properties
 Element.OdaDataSource.privateDriverProperties=Private driver properties
+Element.OdaDataSource.designerState=Designer state
 
 #36 OdaDataSet ( Prefix Element.OdaDataSet )
 Element.OdaDataSet.extensionID=Extension ID
