Support DTE team.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2010,6 +2010,7 @@ Element.DataSet.computedColumns=Computed columns
 Element.DataSet.filter=Filter
 Element.DataSet.columnHints=Column hints
 Element.DataSet.parameters=Parameters
+Element.DataSet.cachedMetaData=Cached metadata
 
 #4. SimpleDataSet  ( prefix  Element.SimpleDataSet )
 Element.SimpleDataSet.dataSource=Data source
@@ -2034,7 +2035,6 @@ Element.SimpleDataSet.afterClose=After close
 Element.SimpleDataSet.afterClose.toolTip=Called just after BIRT closes the data set
 Element.SimpleDataSet.afterClose.reportContext=Report context
 Element.SimpleDataSet.paramBindings=Parameter bindings
-Element.SimpleDataSet.cachedMetaData=Cached metadata
 Element.SimpleDataSet.refTemplateParameter=Referred Template Parameter Definition
 Element.SimpleDataSet.cachedRowCount=Cached row count
   
