Change element types in page-setup slots. Fixed misc bugs.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2873,7 +2873,7 @@ Error.ExtendsException.CANT_EXTEND=The element "{0}" is not allowed to derive.
 Error.ExtendsException.SELF_EXTEND=The {0} cannot extend itself.
 Error.ExtendsException.CIRCULAR=The circular extension is found, because the {0} extends from {1} already.
 Error.ExtendsException.UNNAMED_PARENT=The parent element has no name.
-Error.ExtendsException.PARENT_NOT_IN_COMPONENT=The parent element "{0}" is not in component slot of report design.
+Error.ExtendsException.PARENT_NOT_IN_COMPONENT=The parent element "{0}" is not the top-level report item in components.
 Error.ExtendsException.EXTENDS_FORBIDDEN=Element "{0}" is inside a child element or it already has parent, it can not extend.
 Error.ExtendsException.PARENT_NOT_INCLUDE=The library for the parent element "{0}" is not included.
 Error.ExtendsException.NO_PARENT=The element "{0}" has no parent, it can not be localized.    
